2009-03-28  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/scintilla/text-editor-iterable.c:
	Fix #574607 – Replace function selects text uncorrectly

2009-03-26  Johannes Schmid  <jhs@gnome.org>

	* plugins/scratchbox/plugin.c (ipreferences_merge):
	Fixed warning
	
	* www/htdocs/Makefile.am:
	* www/htdocs/README:
	* www/htdocs/css/Makefile.am:
	* www/htdocs/css/docs.css:
	* www/htdocs/css/layout.css:
	* www/htdocs/css/style.css:
	* www/htdocs/development.html:
	* www/htdocs/downloads.html:
	* www/htdocs/features.html:
	* www/htdocs/index.html:
	* www/htdocs/layout.shtml:
	Removed website directory. Website is in gnomeweb-wml repository now

2009-03-24  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/interfaces/libanjuta.idl:
	Added ianjuta_editor_assist_tip_shown() to determine if a calltip is
	currently active.

	* plugins/language-support-cpp-java/cpp-java-assist.c
	(cpp_java_assist_get_calltip_context),
	(cpp_java_assist_show_calltip), (cpp_java_assist_check),
	(on_editor_char_added), (on_assist_chosen),
	(cpp_java_assist_finalize):

	* plugins/language-support-cpp-java/cpp-java-assist.h:
	* plugins/language-support-cpp-java/plugin.c (on_auto_complete):
	- Avoid jumping tooltips
	- Fix #574802 – show calltips makes the editing lag
	- Fixed backspace problems

	* plugins/scintilla/text_editor.c (iassist_show_tips),
	(iassist_tip_shown), (iassist_iface_init):
	Implemented changed calltip behaviour

	* plugins/sourceview/assist-tip.c (assist_tip_get_coordinates),
	(assist_tip_move):
	* plugins/sourceview/assist-tip.h:
	* plugins/sourceview/sourceview.c (iassist_show_tips),
	(iassist_tip_shown), (iassist_iface_init):
	Implemented changed calltip behaviour

2009-03-21  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/class-inheritance/class-inherit.c
	(cls_inherit_draw_graph):
	* plugins/profiler/gprof-function-call-chart-view.c
	(async_draw_graph):
	fixed #576057 – doesn't build with graphviz 2.22.2

2009-03-20  Johannes Schmid  <jhs@gnome.org>
