@@ -1,5 +1,10 @@
 2009-03-28  Sébastien Granjoux  <seb.sfo@free.fr>
 
+	* plugins/macro/macro-util.c:
+	Fix #577006 – crash creating new file
+
+2009-03-28  Sébastien Granjoux  <seb.sfo@free.fr>
+
 	* plugins/scintilla/text-editor-iterable.c:
 	Fix #574607 – Replace function selects text uncorrectly
 
